==> espruino/Espruino/targets/efm32/jshardware.c <==
#include <stdlib.h>
#include <stdbool.h>
#include <stdint.h>
#include <string.h>
#include <stdio.h>
#include "jshardware.h"
#include "jstimer.h"
#include "jsutils.h"
#include "jsparse.h"
#include "jsinteractive.h"
#include "jswrap_io.h"
#include "jswrap_date.h" // for non-F1 calendar -> days since 1970 conversion.
#include "em_chip.h"
#include "em_cmu.h"
#include "em_emu.h"
#include "em_int.h"
#include "em_rtc.h"
#include "em_timer.h"
#include "em_usart.h"
#include "em_gpio.h"
#include "rtcdriver.h"
#include "nvm_hal.h"
#include "gpiointerrupt.h"
#define SYSCLK_FREQ 48000000 // Using standard HFXO freq
#define USE_RTC
#define RTC_INITIALISE_TICKS 4 // SysTicks before we initialise the RTC - we need to wait until the LSE starts up properly
#define JSSYSTIME_SECOND_SHIFT 20
#define JSSYSTIME_SECOND  (1<<JSSYSTIME_SECOND_SHIFT) // Random value we chose - the accuracy we're allowing (1 microsecond)
#define JSSYSTIME_MSECOND (1<<JSSYSTIME_SECOND_SHIFT)/1000
#define JSSYSTIME_USECOND (1<<JSSYSTIME_SECOND_SHIFT)/1000000

void jshDelayMicroseconds(int microsec) {
  if (microsec <= 0) {
    return;
  }
  utilTicks = microsec/(SYSCLK_FREQ*32);
  if (utilTicks < 2) utilTicks=2;
  if (utilTicks > 0xFFFFFFFF) utilTicks=0xFFFFFFFF;

  TIMER_IntClear(TIMER0, TIMER_IFC_CC1);
  TIMER_CompareSet(TIMER0, 1, TIMER_CounterGet(TIMER0) + (utilTicks & 0xFFFF));
  TIMER_IntEnable(TIMER0, TIMER_IEN_CC1);

  while(utilTicks > 0) {
    EMU_EnterEM1();
  }
  TIMER_IntDisable(TIMER0, TIMER_IEN_CC1);
}

void jshPinSetValue(Pin pin, bool value) {
  if(value) {
    GPIO_PinOutSet(efm32PortFromPin(pin),
                   pinInfo[pin].pin);
  }
  else {
    GPIO_PinOutClear(efm32PortFromPin(pin),
                     pinInfo[pin].pin);
  }
}

bool jshPinGetValue(Pin pin) {
  return GPIO_PinInGet(efm32PortFromPin(pin),
                       pinInfo[pin].pin);
}

void jshUSARTKick(IOEventFlags device) {
  
  USART_TypeDef* uart; // Re-mapping from Espruino to EFM32

  switch(device) {
    case EV_SERIAL1:
      uart = usart0;
      break;
    case EV_SERIAL2:
      uart = usart1;
      break;
    case EV_SERIAL3:
      uart = usart2;
      break;
    case EV_SERIAL4:
      uart = uart0;
      break;
    case EV_SERIAL5:
      uart = uart1;
      break;
    default: assert(0);
  }

  int check_valid_char = jshGetCharToTransmit(device);
  if (check_valid_char >= 0)
  {
    
    uint8_t character = (uint8_t) check_valid_char;
    USART_Tx(uart, character);
  }

}
