==> espruino/Espruino/targets/nrf52/jshardware.c <==
#include <stdlib.h>
#include <stdbool.h>
#include <stdint.h>
#include <string.h>
#include <stdio.h>
#include "jshardware.h"
#include "jstimer.h"
#include "jsutils.h"
#include "jsparse.h"
#include "jsinteractive.h"
#include "jswrap_io.h"
#include "jswrap_date.h" // for non-F1 calendar -> days since 1970 conversion
#include "app_uart.h"
#include "app_error.h"
#include "nrf_delay.h"
#include "nrf.h"
#include "bsp.h"
#include "nrf_drv_timer.h"
#include "nrf_gpio.h"
#define LED_1 17
#define LED_2 18
#define LED_3 19
#define LED_4 20
#define MAX_TEST_DATA_BYTES (15U)
#define UART_TX_BUF_SIZE 64                         /**< UART TX buffer size. */
#define UART_RX_BUF_SIZE 32                         /**< UART RX buffer size. */

void jshDelayMicroseconds(int microsec) {
  if (microsec <= 0)
  {
    return;
  }
  nrf_delay_us((uint32_t)microsec);
}

void jshPinSetValue(Pin pin, bool value) {
  if (value == 1)
  {
    nrf_gpio_pin_set(pin);
  }
  else
  {
    nrf_gpio_pin_clear(pin);
  }
}

bool jshPinGetValue(Pin pin) {
  return nrf_gpio_pin_read(pin);
}

void jshUSARTKick(IOEventFlags device) {
  if (device != EV_SERIAL1)
  {
	  return;
  }

  int check_valid_char = jshGetCharToTransmit(EV_SERIAL1);
  if (check_valid_char >= 0)
  {
    uint8_t character = (uint8_t) check_valid_char;
    while(app_uart_put(character) != NRF_SUCCESS);
  }
}
